nexus-repo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: nexus
spec:
  type: NodePort
  selector:
    app: nexus-repo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30011
